[QA]1.Create-QA-server: set staging as Rails and Rack environment for qa server..

--- a/config/database.yml
+++ b/config/database.yml
@@ -37,3 +37,7 @@ test:
 production:
   <<: *default
   database: db/production_postgresql
+
+staging:
+  <<: *default
+  database: db/production_postgresql
