--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - "3000:3000"
     links:
       - db
+    tty: true
+    stdin_open: true
 
   db:
     image: postgres
@@ -26,4 +28,3 @@ services:
 volumes:
   bundle_path:
   db:
-    
